old-code/sa/istio-system/istio-system/gateway/g39-gateway/g39-istio-ingressgateway-inner.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: g39-istio-ingressgateway-inner
  namespace: istio-system
spec:
  selector:
    istio: g39-istio-ingressgateway-inner
  servers:
  - hosts:
    - '*.g39-prod.com'
    port:
      name: http2
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: false

  - hosts:
    - '*.g39-prod.com'
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: g39-prod-com-cert
      minProtocolVersion: TLSV1_2

  - hosts:
    - '*'
    port:
      name: mongodb
      number: 27017
      protocol: TCP

  # - hosts:
  #   - '*'
  #   port:
  #     name: g39-tidb-pd
  #     number: 2379
  #     protocol: TCP
  # - hosts:
  #   - '*'
  #   port:
  #     name: g39-tidb-4000
  #     number: 4000
  #     protocol: TCP
  # - hosts:
  #   - '*'
  #   port:
  #     name: g39-tidb-10080
  #     number: 10080
  #     protocol: TCP
  # - hosts:
  #   - '*'
  #   port:
  #     name: g39-redis-cluster
  #     number: 6379
  #     protocol: TCP
  # - hosts:
  #   - '*'
  #   port:
  #     name: g39-redis-cluster-16379
  #     number: 16379
  #     protocol: TCP
